--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,13 @@
 	-webkit-flex: 1 100%;
 	flex: 1 100%;
 }
+a:visited.flex-container{
+	color: white;
+	font-weight: bold; 
+	text-align: left; 
+	padding: 10px; 
+	text-decoration: underline;
+}
 
 .article {
 	text-align: left;
@@ -28,11 +35,12 @@ header {
 	font-size: 25px;
 	font-weight: bold;
 	text-decoration: none;
-	}
+}
+
 footer {
 	background: #aaa;
 	color:white;
-	}
+}
 .nav {
 	background:#f1f1f1;
 	overflow:hidden;
@@ -96,12 +104,4 @@ table{
 	font-size: 16px;
 	font-weight: bold;
 	text-decoration: none;
-}
-
-.htmlord a:link, a:visited{
-	color: white;
-	font-weight: bold; 
-	text-align: left; 
-	padding: 10px; 
-	text-decoration: underline;
 }
